--- a/Web_Development/Module_1/Ex002/index.htm
+++ b/Web_Development/Module_1/Ex002/index.htm
@@ -18,5 +18,30 @@
     <!--(&) lt - Menor que-->
     <!--(&) gt - Maior que -->
 
+    <p>Vamos Gerar Simbolos especiais: <!--Simbolos Especiais em html-->
+        &reg;
+        &copy;
+        &trade;
+        &euro;
+        &pound;
+        &yen;
+        &cent;
+        &Delta;
+        &uparrow;
+        &uarr;
+    </p>
+
+    <p>Vamos Adicionar alguns emoji: <!--https://emojipedia.org-->
+
+        &#x1F603;
+        &#x1F917;
+
+        <br>
+
+        &#x - pra dizer que o valor é em exadecimal;
+
+
+    </p>
+
 </body>
 </html>
