--- a/Web_Development/Module_1/Ex011/index.html
+++ b/Web_Development/Module_1/Ex011/index.html
@@ -17,5 +17,11 @@
     </ul>
 
     <h2>Voce Está na pagina Principal!!</h2>
+
+    <h1>Links para donwload</h1>
+    <ul>
+        <li><a href="Livro/html_css_landing_page-main.zip" download="html_css_landing_page-main.zip">Baixar o livro em ZIP</a></li>
+        <li><a href="Livro/6.2.4.4 Packet Tracer - Router and Switch Resilience.pdf" download="6.2.4.4 Packet Tracer - Router and Switch Resilience.pdf">Livro Conpactado em PDF</a></li>
+    </ul>
 </body>
 </html>
